# PianoSite

./: README.md  main.py  pyproject.toml  user.db
src/core/: di.py
src/core/configs/: prod.py
src/internal/domain/: user.py
src/internal/handlers/: auth_handler.py
src/internal/models/: token.py  user_create.py  user_login.py  user_model.py
src/internal/repositories/: init_db.py  sessions.py  user_repository.py
src/internal/services/: auth_service.py
src/piano_site/cmd/: di.py
src/piano_site/internal/domain/: user.py
src/piano_site/internal/handlers/: auth_handler.py
src/piano_site/internal/repositories/: user_repository.py
src/piano_site/internal/services/: auth_service.py
static/: app.js  index.html  piano_engine.js  style.css
